# web-cacher

./: Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs
src/cache/: disk.rs  memory.rs
src/cli/: args.rs  handler.rs  mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/fetcher/: client.rs  diff.rs  health.rs  mod.rs
src/report/: html.rs
src/scheduler/: metrics.rs  mod.rs
src/utils/: mod.rs
templates/: report_template.html
