[package]
name = "web-cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
humantime = "2"
