[package]
name = "web-cacher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1.0", features = ["full"] }
reqwest = {version = "0.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.20"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
humantime = "2"
humantime-serde = "1.1"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
futures = "0.3"
sha2 = "0.10"
thiserror = "1.0"
prometheus-client = "0.22"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
similar = { version = "2.2", features = ["inline"] }
html-escape = "0.2"
lru = "0.10"
bincode = "1.3"
md5 = "0.7"
http = "1"
http-serde = "2" 
